I changed the footer and added a track selection option
